[package]
name = "mod_prometheus"
version = "0.1.0"
authors = ["Moises Silva <moises.silva@gmail.com>"]

[dependencies]
lazy_static = "0.1.*"
libc = "*"
prometheus = { git = "https://github.com/moises-silva/prometheus-rs" }
freeswitchrs = { git = "https://github.com/moises-silva/freeswitchrs" }

#[dependencies.freeswitchrs]
#path = ".."

#[dependencies.prometheus]
#path = "/home/moy/src/rust/prometheus"

[lib]
crate-type = ["dylib"]
name = "mod_prometheus"
path = "mod_prometheus.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
